package headfirst.designpatterns.observer.simple;

/**
 * @author: sjmp1573
 * @date: 2022/5/3 21:22
 * @description:
 */

public interface Observer {
    void update(String title,String author,String content);
}
